# MLOPs-Vehicle-Insurance

./: .gitignore  README.md  demo.py  pyproject.toml  setup.py
src/constants/: __init__.py
src/src.egg-info/: PKG-INFO  SOURCES.txt
